@@ -1,0 +1,98 @@
+/* @group blog */
+
+div.blogByLine,
+.discussion .documentByLine {
+  background-color: $lightgray;
+  border: 1px solid $lightgray2;
+  padding: 0.5em;
+  color: $text-color;
+  margin-bottom: 0;
+}
+.blogText {
+  padding: 1em 0;
+}
+
+.discussion {
+  .comment {
+    clear: right;
+  }
+  .commentImage {
+    float: left;
+    padding: 0.5em;
+    img {
+      height: 32px;
+    }
+  }
+  .commentBody {
+    border: 1px solid $lightgray2;
+    border-top-width: 0;
+    padding: 1em;
+  }
+  button.reply-to-comment-button {
+    float: right;
+    margin-top: 0.5em;
+    margin-bottom: 1.5em;
+  }
+  .replyTreeLevel1 {
+    margin-left: 3em;
+  }
+  .replyTreeLevel2 {
+    margin-left: 6em;
+  }
+  .replyTreeLevel3 {
+    margin-left: 9em;
+  }
+  .replyTreeLevel4 {
+    margin-left: 12em;
+  }
+  .replyTreeLevel5,
+  .replyTreeLevel6,
+  .replyTreeLevel7,
+  .replyTreeLevel8,
+  .replyTreeLevel9 {
+    margin-left: 15em;
+  }
+}
+
+
+.reply {
+  clear: both;
+  border: 1px solid $lightgray2;
+  margin-top: 0.5em;
+  margin-bottom: 1.5em;
+  fieldset {
+    padding: 0;
+    margin: 0;
+    padding-bottom: 1em;
+    border-bottom: 0;
+  }
+  fieldset > * {
+    padding: 0 2%;
+  }
+  legend {
+    width: 96%;
+    padding: 2%;
+    margin-bottom: 1em;
+    border-bottom: 1px solid $lightgray2;
+    background-color: $lightgray;
+  }
+
+}
+
+/* @end */
+
+/* @group tags portlet */
+
+.portletTagcloud ul {
+  @include ul($style: 'inline');
+}
+
+/* @end */
+
+/* @group archive portlet */
+
+.portletArchiveListing li.month {
+  padding-left: 1.5em;
+}
+
+/* @end */
