@@ -2,12 +2,18 @@
     xmlns="http://namespaces.zope.org/zope"
     xmlns:browser="http://namespaces.zope.org/browser"
     xmlns:zcml="http://namespaces.zope.org/zcml"
+    xmlns:theme="http://namespaces.zope.org/plonetheme.onegov"
     i18n_domain="ftw.blog">
 
     <browser:resourceDirectory
         name="ftw.blog.css"
         directory="stylesheets"
         />
+
+    <configure zcml:condition="installed plonetheme.onegov">
+        <include package="plonetheme.onegov" />
+        <theme:add_scss path="blog.scss" />
+    </configure>
 
     <browser:page
         for="*"
